tests/expectations/parser/structs/only_comma_separators_fail.out
Error [EPAR0370047]: expected ','
    --> test:3:14
     |
   3 |         x: u8;
     |              ^
Error [EPAR0370047]: expected field name
    --> test:3:14
     |
   3 |         x: u8;
     |              ^
   4 |         y: u8
     |         ^^^^^
Error [EPAR0370047]: expected ','
    --> test:8:14
     |
   8 |         x: u8;
     |              ^
Error [EPAR0370047]: expected field name
    --> test:8:14
     |
   8 |         x: u8;
     |              ^
   9 |         y: u8;
     |         ^^^^^^
